--- a/webform-expressapp/views/mapiframe/map.html
+++ b/webform-expressapp/views/mapiframe/map.html
@@ -10,6 +10,7 @@
     <div id="my-map" is="rv-map" style="height:100%;" rv-config="configuration" rv-plugins="select_coordinates"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="fgpv/rv-main.js"></script>
+    <script type="text/javascript" src="conservation-layers.json"></script>
     <script src="mapconfig.js"></script>
     
 </body>
