added success modal to submit and save button

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -1334,6 +1334,24 @@
         </div>
     </div>
 
+    <div class="modal fade" id="submitSuccessModal" tabindex="-1" role="dialog" aria-labelledby="mapSelectModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="mapSelectModalLabel">Success</h5>
+            <button type="button btn-success" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body">
+                Your submission was received! 
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-dismiss="modal">Go Back</button>
+            </div>
+        </div>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
