--- a/webform-expressapp/views/selectionpage.html
+++ b/webform-expressapp/views/selectionpage.html
@@ -17,7 +17,7 @@
             <h1>Flood Mapping Metadata Portal</h1>
             
             <p>
-                <h4>I will be submitting information on.....</h4>
+                <h4>I will be submitting additional information on.....</h4>
             </p>
             <form id="selectionform" method="post" action="/entry">
                 <div class="form-check-group">
