Added legend for heatmap

--- a/webform-expressapp/views/mapiframe/heatmap.html
+++ b/webform-expressapp/views/mapiframe/heatmap.html
@@ -4,6 +4,13 @@
     <link rel="stylesheet" href="fgpv/rv-styles.css">
     <script src="selectplugin.js"></script>
     <title>FGPV</title>
+    <style>
+        md-list-item::before {
+            display:none;
+            height:0px; 
+            width:0px; 
+        }
+    </style>
 </head>
 
 <body>
