Added warning on back button click

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -1292,7 +1292,11 @@
 
         <p id="projectNameh">Unique name given to each project.</p>
 
-        <p id="typeofrecordh"></p>
+        <p id="typeofrecordh">Inundation Maps: Maps that show the floodwater extent of real flood events, or that show potential floodwater coverage for flood events of different magnitudes (e.g. annual exceedance prilities). They are intended to aid in the management of emergency preparedness plans for communities situated within floodplains and flood hazard zones. 
+            Flood Hazard Maps: Engineering maps that display the results of hydrologic and hydraulic investigations that show areas that coulde flooded under different likelihoods. These maps are used for regulatory planning purposes related to land use planning and flood mitigation. 
+            Flood Risk Maps: Maps that indicate the potential adverse consequences associated with floods, includingut not limited to social, economic, environmental and cultural consequences to communities during a specific potential flood event and the overall risks to the community from a range of potential flood scenarios. 
+            Flood Awareness Maps: Communication maps that serve to inform members of the public regarding the history of flooding in their communities, as well as the potential for future flooding and the risks that such flooding would pose to residential properties, businesses, cultural assets, infrastructure and human life. These interactive web maps or printed poster-style maps include a range of additional content types, such as photographs, descriptive text and graphics.
+        </p>
 
         <p id="projectcath">Provides a description of why an update is currently required. Multiple reasons could be entered, with the following suggestions provided; Age-Mapping, Quality-Mapping, Age-Modeling, Quality-Modeling, Development, New Data or Other.</p>
 
