--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -111,6 +111,7 @@
                             <option value="inland">Inland Waterbody</option>
                             <option value="greatlakesshoreline">Great Lakes Shoreline</option>
                             <option value="greatlakescc">Great Lakes Connecting Channel</option>
+                            <option value="oceanmapping">Ocean Mapping Project</option>
                             <option value="other">Other Natural Hazard Project</option>
                         </select>
                     </div> 
@@ -458,7 +459,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
-                        <label for="wclength">Watercourse Length (km) </label>
+                        <label for="wclength">Watercourse Length Mapped (km)</label>
                         <input type="number" id="wclength" class="form-control" min="0" step=".01">
                     </div>
                 </div>
@@ -917,7 +918,7 @@
                             <option value="mtomfim">MTOMFIM</option>
                             <option value="waterlevelfa">Water Level FA</option>
                             <option value="hymo">HYMO</option>
-                            <option value="swmm">SWMM</option>
+                            <option value="swmm">SWMM(PCSWMM)</option>
                             <option value="h2d2">H2D2</option>
                             <option value="mike">MIKE</option>
                             <option value="gawser">GAWSER</option>
@@ -1094,7 +1095,7 @@
                             <option value="flood">Flood</option>
                             <option value="estimated">Estimated</option>
                             <option value="gauged">Gauged</option>
-                            <option value="FA">FA</option>
+                            <option value="frequencyanalysis">Frequency Analysis</option>
                         </select>
                     </div>
                 </div>
