Got info window to display, but still displays in wrong location, without background

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -958,7 +958,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <label for="inputcomments" class="textarealabel">Quality of Input Comments</label>
+                        <label for="inputcomments" class="textarealabel">Quality of Input and Calibration Comments</label>
                         <textarea class="form-control" maxlength="250" id="inputcomments" rows="3"></textarea>
                     </div>
                 </div>
@@ -1139,7 +1139,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
-                        <label for="hydrainputcomments" class="textarealabel">Hydraulics Quality of Input Comments</label>
+                        <label for="hydrainputcomments" class="textarealabel">Hydraulics Quality of Input and Calibration Comments</label>
                         <textarea class="form-control" maxlength="250" id="hydrainputcomments" rows="3"></textarea>
                     </div>
                 </div>
