--- a/webform-expressapp/views/mapiframe/heatmap.html
+++ b/webform-expressapp/views/mapiframe/heatmap.html
@@ -11,6 +11,7 @@
             width:0px; 
         }
     </style>
+    <link rel="stylesheet" href="https://js.arcgis.com/3.31/esri/css/esri.css">
 </head>
 
 <body>
