more changes to form fields

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -537,7 +537,7 @@
                 <div class="col-lg-12"> 
                     <div class="form-group">
                         <label for="imgprojid">Imagery Project ID</label>
-                        <input type="text" maxlength="20" class="form-control" id="imgprojid" placeholder="Enter Project ID">
+                        <input type="text" maxlength="20" class="form-control optional" id="imgprojid" placeholder="Enter Project ID">
                     </div>
                 </div>
             </div>
@@ -596,6 +596,7 @@
                             <option value="cgvd2013">CGVD2013</option>
                             <option value="cgvd28">CGVD28</option>
                             <option value="cgvd28-pre1978">CGVD28-Pre1978</option>
+                            <option value="other">Other</option>
                         </select>
                     </div>
                 </div>
@@ -696,7 +697,7 @@
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label for="elevprojid">Elevation Project ID</label>
-                        <input type="text" maxlength="20" class="form-control" id="elevprojid" placeholder="Enter Project ID">
+                        <input type="text" maxlength="20" class="form-control optional" id="elevprojid" placeholder="Enter Project ID">
                     </div>
                 </div>
             </div>
@@ -778,6 +779,7 @@
                             <option value="cgvd2013">CGVD2013</option>
                             <option value="cgvd28">CGVD28</option>
                             <option value="cgvd28-pre1978">CGVD28-Pre1978</option>
+                            <option value="other">Other</option>
                         </select>
                     </div>
                 </div>
@@ -901,7 +903,7 @@
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label for="hydroprojid">Hydrology Project ID</label>
-                        <input type="text" maxlength="20" class="form-control" id="hydroprojid" placeholder="Enter Project ID">
+                        <input type="text" maxlength="20" class="form-control optional" id="hydroprojid" placeholder="Enter Project ID">
                     </div>
                 </div>
             </div>
@@ -1076,7 +1078,7 @@
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label for="hydraprojid">Hydraulics Project ID</label>
-                        <input type="text" maxlength="20" class="form-control" id="hydraprojid" placeholder="Enter Project ID">
+                        <input type="text" maxlength="20" class="form-control optional" id="hydraprojid" placeholder="Enter Project ID">
                     </div>
                 </div>
             </div>
