--- a/webform-expressapp/views/mapiframe/heatmap.html
+++ b/webform-expressapp/views/mapiframe/heatmap.html
@@ -19,6 +19,7 @@
     <div id="my-heatmap" is="rv-map" style="height:100%;" rv-config="configuration" rv-plugins="heatmap"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="fgpv/rv-main.js"></script>
+    <script src="https://js.arcgis.com/3.31/"></script>
     <script src="mapconfig.js"></script>
     <script src="heatmapplugin.js"></script>
 </body>
