Changed secondary data source to checkboxes, fixed bug where clicking submit on save would break tab navigation

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -848,6 +848,7 @@
                 </div>
             </div>
 
+            <!--
             <div class="row">
                 <div class="col-lg-12">
                     <div class="form-group">
@@ -866,6 +867,81 @@
                     </div>
                 </div>
             </div>
+            -->
+
+            <label for="secdatasource">
+                Secondary Data Source
+            </label>
+            <div class="row checkboxes" id="secdatasource">
+                <div class="col-lg-4 col-md-12 col-sm-12">             
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="lidar" id="lidar">
+                            <label class="form-check-label" for="lidar">
+                                lidar
+                            </label>
+                        </div>
+    
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="photogrammetry" id="photogrammetry">
+                            <label class="form-check-label" for="photogrammetry">
+                                Photogrammetry
+                            </label>
+                        </div> 
+    
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="radar" id="radar">
+                            <label class="form-check-label" for="radar">
+                                Radar
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="sonar" id="sonar">
+                            <label class="form-check-label" for="sonar">
+                                Sonar
+                            </label>
+                        </div>
+    
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="satelite" id="satelite">
+                            <label class="form-check-label" for="satelite">
+                                Satelite
+                            </label>
+                        </div>
+    
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="uav" id="uav">
+                            <label class="form-check-label" for="uav">
+                                UAV
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-12 col-sm-12">
+                    <div class="form-group">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="gps" id="gps">
+                            <label class="form-check-label" for="gps">
+                                GPS
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="groundsurvey" id="groundsurvey">
+                            <label class="form-check-label" for="groundsurvey">
+                                Ground Survey
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
             <div class="row">
                 <div class="col-lg-12">
