--- a/webform-expressapp/views/selectionpage.html
+++ b/webform-expressapp/views/selectionpage.html
@@ -16,6 +16,13 @@
         <div class="container">
             <h1>Flood Mapping Metadata Portal</h1>
             
+            <h3>About</h3>
+            <p>
+                This form is intended to collect metatdata that describes the data, inputs, and models used to develop flood maps.  A flood map identifies the boundaries of a potential flood event based on type and likelihood, and can be used to help identify the specific impacts of a flood event on structures, people and assets.
+                There is a default page which stores information such as: location, number of kilometers mapped, funding sources, etc. These are required fields.
+                In addition, where available, users can select any of the options below to enter data regarding base data used in the modelling process:
+            </p>
+
             <p>
                 <h4>I will be submitting additional information on.....</h4>
             </p>
