Added additional flood standard options

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -147,6 +147,13 @@
                                 1000 yr
                             </label>
                         </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="5yr" id="5yr">
+                            <label class="form-check-label" for="5yr">
+                                5 yr
+                            </label>
+                        </div>
                     </div>
                 </div>
 
@@ -172,6 +179,12 @@
                                 100 yr
                             </label>
                         </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="2yr" id="2yr">
+                            <label class="form-check-label" for="2yr">
+                                2 yr
+                            </label>
+                        </div>
                     </div>
                 </div>
 
@@ -191,6 +204,13 @@
                             </label>
                         </div>
     
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="10yr" id="10yr">
+                            <label class="form-check-label" for="10yr">
+                                10 yr
+                            </label>
+                        </div>
+
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="other" id="other" onclick="checkOtherFloodHzd(this)">
                             <label class="form-check-label" for="other">
