Added info windows for graphing page

--- a/webform-expressapp/views/mapiframe/map.html
+++ b/webform-expressapp/views/mapiframe/map.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <link rel="stylesheet" href="https://js.arcgis.com/3.31/esri/css/esri.css">
     <link rel="stylesheet" href="fgpv/rv-styles.css">
     <script src="selectplugin.js"></script>
     <title>FGPV</title>
