--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -32,8 +32,8 @@
     
             <div class="collapse navbar-collapse" id="collapseNav">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="/">Submit Data</a>
-                    <a class="nav-item nav-link active" href="/analytics">View Data</a>
+                    <a class="nav-item nav-link active" href="/hydro_dev/">Submit Data</a>
+                    <a class="nav-item nav-link active" href="/hydro_dev/analytics">View Data</a>
                 </div>
             </div>
         </nav>
@@ -57,7 +57,7 @@
     </div>
 
 
-<form id="entryForm" method="post" action="/submit">
+<form id="entryForm" method="post" action="/hydro_dev/submit">
     <!--TABS FOR NAVIGATION BETWEEN THE STEPS OF THE FORMS-->
     <div class="tab">
         <div class="container">
