--- a/webform-expressapp/views/thankyou.html
+++ b/webform-expressapp/views/thankyou.html
@@ -18,7 +18,7 @@
             <div class="row padme">
                 <div class= col-lg-12>
                     <div class="form-group">
-                        <a href = "/analytics" class="button btn btn-success btn-block">Go to analytics page</a>
+                        <a href = "/hydro_dev/analytics" class="button btn btn-success btn-block">Go to analytics page</a>
                     </div>
                 </div>
             </div>
