--- a/webform-expressapp/views/selectionpage.html
+++ b/webform-expressapp/views/selectionpage.html
@@ -26,7 +26,7 @@
             <p>
                 <h4>I will be submitting additional information on.....</h4>
             </p>
-            <form id="selectionform" method="post" action="/entry">
+            <form id="selectionform" method="post" action="/hydro_dev/entry">
                 <div class="form-check-group">
                     <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="imagery" name="imagery">
