update some ambiguous fields

--- a/webform-expressapp/views/entryPage.ejs
+++ b/webform-expressapp/views/entryPage.ejs
@@ -306,7 +306,7 @@
                 <div class="col-lg-6 col-md-12 col-sm-12">
                     <div class="form-group">
                         <label for="watershed">Watershed Name</label>
-                        <input type="text" class="form-control" id="watershed" placeholder="Enter Watershed Name">
+                        <input type="text" class="form-control optional" id="watershed" placeholder="Enter Watershed Name">
                     </div>
                 </div> 
             </div>
@@ -315,7 +315,7 @@
                 <div class="col-lg-12">
                     <div class="form-group">
                         <label for="localwcname">Local Watercourse Name</label>
-                        <input type="text" maxlength="100" id="localwcname" class="form-control">
+                        <input type="text" maxlength="100" id="localwcname" class="form-control optional">
                     </div>
                 </div>
             </div>
@@ -1407,7 +1407,7 @@
 
         <p id="floodHzdStdh">The regulatory zone and standard applied to a particular project.</p>
 
-        <p id="extentmaph"></p>
+        <p id="extentmaph">Enter or select the extent that was mapped. Enter coordinates, or select on the map, or upload a shapefile. </p>
 
         <p id="officialWCNameh">The name of the primary watercourse or waterbody.</p>
 
