--- a/webform-expressapp/views/selectionpage.html
+++ b/webform-expressapp/views/selectionpage.html
@@ -21,6 +21,12 @@
                 This form is intended to collect metatdata that describes the data, inputs, and models used to develop flood maps.  A flood map identifies the boundaries of a potential flood event based on type and likelihood, and can be used to help identify the specific impacts of a flood event on structures, people and assets.
                 There is a default page which stores information such as: location, number of kilometers mapped, funding sources, etc. These are required fields.
                 In addition, where available, users can select any of the options below to enter data regarding base data used in the modelling process:
+                <ul>
+                    <li>Imagery Data - If you have any data on the horizontal/vertical reference of imagery data, or the deriviation method</li>
+                    <li>Elevation Data - If you have any data on the horizontal/vertical reference and format of elevation data</li>
+                    <li>Hydrology Data - If you have any data on the hydrology method, number of events modelled, etc</li>
+                    <li>Hydraulics Data - If you have any data on the hydraulic model, or calibration process used</li>
+                </ul>
             </p>
 
             <p>
